# simple-survey

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  cdm.json  dot.json  package-lock.json  package.json  polkadot-app-deploy.config.ts  tsconfig.tsbuildinfo
.github/: copilot-instructions.md
.github/workflows/: ci.yml  contract.yml  deploy-playground.yml  deploy-summit.yml
contracts/surveys/: Cargo.toml
src/: App.tsx  utils.ts
