[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["Survey DApp"]
homepage = "https://polkadot.com/"
edition = "2024"

[workspace.dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "sm/cdm", features = ["alloc"] }
polkavm-derive = "0.31"
picoalloc = "5.2"
